--- a/about/index.html
+++ b/about/index.html
@@ -7,14 +7,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。">
+    content="Indeeecsa組織番号データベース検索の基本的な方針や利用方法などをお伝えしています">
   <meta name="keywords" content="組織番号検索サイト">
   <meta name="author" content="Indeeecsa">
   <meta property="og:title" content="組織番号検索 by Indeeecsa">
   <meta property="og:description"
-    content="このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。">
+    content="Indeeecsa組織番号データベース検索の基本的な方針や利用方法などをお伝えしています">
   <meta property="og:image" content="https://hmg-publisha.haruharutv.jp/">
-  <title>Indeeecsa組織番号データベース検索</title>
+  <title>このサイトについて | Indeeecsa組織番号データベース検索</title>
 </head>
 <body>
   <topbar>
@@ -24,7 +24,16 @@
     
     <about>
         <div style="text-align: left;margin-left:20px;margin-right:20px;">
+            <a href="./index.html">ホーム</a> > このサイトについて
             <h2>このサイトについて</h2>
+            <p>このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。</p>
+            <a href="about/help/index.html">利用方法</a>
+            <h3>利用規約</h3>
+            <p>当サイトを利用した時点で、Indeeecsaのプロバイダ団体の利用規約について同意したものとします。</p>
+            <a href="https://hmg-publisha.haruharutv.jp/terms">利用規約↗</a>
+            <h3>リンクについて</h3>
+            <p>このサイトへのリンクを掲載する場合はトップページのURLの上、下のバナーもご活用ください。また、当サイトをiframeやembeddなどでご自身のサイトに埋め込むことは禁止しております。ご自身のサイトから情報を参照されたい場合は開発者向けAPIを利用してください。</p>
+            <img src="soshiki-search-banner.png">
         </div>    
     </about>
 
