--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
             <a href="https://hmg-publisha.haruharutv.jp/terms">利用規約↗</a>
             <h3>リンクについて</h3>
             <p>このサイトへのリンクを掲載する場合はトップページのURLの上、下のバナーもご活用ください。また、当サイトをiframeやembeddなどでご自身のサイトに埋め込むことは禁止しております。ご自身のサイトから情報を参照されたい場合は開発者向けAPIを利用してください。</p>
-            <img src="soshiki-search-banner.png">
+            <img src="https://indeeecsa-orgnization-search.netlify.app/soshiki-search-banner.png" style="width:250px;">
         </div>    
     </about>
 
