--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <topbar>
-    <img src="service-logo.png" class="service-logo">
+    <img src="https://indeeecsa-orgnization-search.netlify.app/service-logo.png" class="service-logo">
   </topbar>
   <maincontents>
     
