--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
     
     <about>
         <div style="text-align: left;margin-left:20px;margin-right:20px;">
-            <a href="./index.html">ホーム</a> > このサイトについて<br>
+            <a href="../index.html">ホーム</a> > このサイトについて<br>
             <h2>このサイトについて</h2>
             <p>このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。</p>
             <a href="about/help/index.html">利用方法</a>
