--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
           <input type="radio" name="tab" id="tab2" onclick="tabClick(2)">
           <label for="tab2">組織番号から探す</label>
 
-          <div class="tabBody">
-            <p>サンプル</p>
-            <p id="tabNo">タブ1</p>
+          <div id="tb1">
+            <h3>団体の名称</h3>
+            <p>団体の名称で検索できます。複数表記がある場合も</p>
+            <input>
           </div>
 
         </div>
@@ -370,7 +371,7 @@
   }
 
   .service-logo {
-    height: 55px;
+    height: 70px;
     margin: 10px;
   }
 
