--- a/index.html
+++ b/index.html
@@ -362,7 +362,9 @@
     color: #fff;
     /*text-align:center;*/
     width: 100%;
-    padding: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     background: #fff;
     position: fixed;
     top: 0px;
