--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
     color: #fff;
     /*text-align:center;*/
     width: 100%;
+    padding-top:5px;
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
