--- a/index.html
+++ b/index.html
@@ -70,14 +70,17 @@
     border: none;
     cursor: pointer;
     font-size: 18px;
-
+    border-top:solid 2px gray;
+    border-left: solid 2px gray;
+    border-right:solid 2px gray;
+    border-bottom:none;
   }
   
   .tab-button.active {
     background-color: #fff;
-    border-top:lightblue;
-    border-left:lightblue;
-    border-right:lightblue;
+    border-top:solid 2px lightblue;
+    border-left: solid 2px lightblue;
+    border-right:solid 2px lightblue;
     border-bottom:none;
   }
   
