--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
             <button class="tab-button active" onclick="openTab(event, 'tab1')">団体の名称などで探す</button>
             <button class="tab-button" onclick="openTab(event, 'tab2')">組織番号で探す</button>
           </div>
-          
-          <div id="tb1">
+          <div id="tab1" class="tab-content active">
             <h3>団体の名称</h3>
             <p>団体の名称で検索できます。複数表記がある場合も</p>
             <input>
           </div>
-
+          <div id="tab1" class="tab-content active">
+            <h3>組織番号で探す</h3>
+            <p></p>
+            <input>
+          </div>
         </div>
       </div>
       <script src="https://hmg-publisha.haruharutv.jp/artist/a-script.js">
@@ -70,17 +73,17 @@
     border: none;
     cursor: pointer;
     font-size: 18px;
-    border-top:solid 2px gray;
-    border-left: solid 2px gray;
-    border-right:solid 2px gray;
+    border-top:solid 5px gray;
+    border-left: solid 5px gray;
+    border-right:solid 5px gray;
     border-bottom:none;
   }
   
   .tab-button.active {
     background-color: #fff;
-    border-top:solid 2px lightblue;
-    border-left: solid 2px lightblue;
-    border-right:solid 2px lightblue;
+    border-top:solid 5px lightblue;
+    border-left: solid 5px lightblue;
+    border-right:solid 5px lightblue;
     border-bottom:none;
   }
   
