--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="tabArea">
           <div class="tab-container">
             <button class="tab-button active" onclick="openTab(event, 'tab1')">団体の名称などで探す</button>
-            <button class="tab-button" onclick="openTab(event, 'tab2')">組織番号で探す</button>
+            <button class="tab-button" onclick="openTab(event, 'tab2')" style="margin-left:10px;">組織番号で探す</button>
           </div>
           <div id="tab1" class="tab-content active">
             <h3>団体の名称</h3>
@@ -67,7 +67,7 @@
   }
   
   .tab-button {
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 8px 8px 0px 0px;
     padding: 10px 20px;
     background-color: #fff;
     border: none;
