--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
   
   .tab-content.active {
     display: block;
+    border-bottom:solid 5px lightblue;
+    border-left: solid 5px lightblue;
+    border-right:solid 5px lightblue;
+    border-radius: 0px 0px 8px 8px;
   }
   
   li img {
