--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     border-left: solid 5px lightblue;
     border-right:solid 5px lightblue;
     border-radius: 0px 0px 8px 8px;
+    padding:15px;
   }
   
   li img {
