--- a/index.html
+++ b/index.html
@@ -35,11 +35,6 @@
             <input>
             <h3 style="color:rgb(162, 221, 241)">活動地域</h3>
             <p>都道府県や郵便番号で検索できます。</p>
-            <input>
-          </div>
-          <div id="tab2" class="tab-content">
-            <h3>組織番号で探す</h3>
-            <p></p>
             <select>
               <option value>選択してください</option>
               <option value="北海道">北海道</option>
@@ -91,6 +86,11 @@
               <option value="沖縄県">沖縄県</option>
           </select>
           </div>
+          <div id="tab2" class="tab-content">
+            <h3>組織番号で探す</h3>
+            <p></p>
+            <input>
+          </div>
 
         </div>
       </div>
@@ -115,7 +115,7 @@
   </maincontents>
 </body>
 <style>
-  input{
+  select input{
     padding:7px;
     display:block;
     border:solid 2px #ccc;
