--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>団体の名称で検索できます。複数表記がある場合も</p>
             <input>
             <h3 style="color:rgb(162, 221, 241)">活動地域</h3>
-            <p>都道府県や郵便番号で検索できます。</p>
+            <p>都道府県などで検索できます。</p>
             <select>
               <option value>選択してください</option>
               <option value="北海道">北海道</option>
