--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
           <div id="tab1" class="tab-content active">
             <h3 style="color:rgb(162, 221, 241)">団体の名称</h3>
-            <p>団体の名称で検索できます。複数表記がある場合も</p>
+            <p>団体の名称で検索できます。複数表記がある場合は正式名称もしくは</p>
             <input>
             <h3 style="color:rgb(162, 221, 241)">活動地域</h3>
             <p>都道府県などで検索できます。</p>
@@ -85,7 +85,10 @@
               <option value="鹿児島県">鹿児島県</option>
               <option value="沖縄県">沖縄県</option>
           </select>
+          <h3 style="color:rgb(162, 221, 241)">検索の条件設定</h3>
+          <a style="color:blue;">詳細な検索条件を開く</a>
           </div>
+
           <div id="tab2" class="tab-content">
             <h3>組織番号で探す</h3>
             <p></p>
@@ -115,7 +118,7 @@
   </maincontents>
 </body>
 <style>
-  select input{
+  select,input{
     padding:7px;
     display:block;
     border:solid 2px #ccc;
