--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
           <div id="tab1" class="tab-content active">
             <h3 style="color:rgb(162, 221, 241)">団体の名称</h3>
-            <p>団体の名称で検索できます。複数表記がある場合は正式名称もしくは</p>
+            <p>団体の名称で検索できます。複数表記がある場合は正式名称もしくはカタカナ表記でも検索できます</p>
             <input>
             <h3 style="color:rgb(162, 221, 241)">活動地域</h3>
             <p>都道府県などで検索できます。</p>
