--- a/index.html
+++ b/index.html
@@ -86,12 +86,15 @@
               <option value="沖縄県">沖縄県</option>
           </select>
           <h3 style="color:rgb(162, 221, 241)">検索の条件設定</h3>
-          <a style="color:blue;">詳細な検索条件を開く</a>
+            <details><summary><a style="color:blue;">詳細な検索条件を開く</a></summary>
+            登録終了も検索する<input type="checkbox">
+            </details>
+
           </div>
 
           <div id="tab2" class="tab-content">
             <h3>組織番号で探す</h3>
-            <p></p>
+             <p></p>
             <input>
           </div>
 
