--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <option value="沖縄県">沖縄県</option>
           </select>
           <h3 style="color:rgb(162, 221, 241)">検索の条件設定</h3>
-            <details><summary><a style="color:blue;">詳細な検索条件を開く</a></summary>
+            <details><summary><a style="color:blue;" href="#">詳細な検索条件を開く</a></summary>
             登録終了も検索する<input type="checkbox">
             </details>
 
