--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </select>
           <h3 style="color:rgb(162, 221, 241)">検索の条件設定</h3>
             <details><summary><a style="color:blue;" href="#">詳細な検索条件を開く</a></summary>
-            登録終了も検索する<input type="checkbox">
+            登録終了も検索する<input type="checkbox" style="display: inline;">
             </details>
 
           </div>
