--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
       <script src="https://hmg-publisha.haruharutv.jp/artist/a-script.js">
       </script>
     </about>
-
+<div style="display:block;margin:15px;border-bottom:solid lightblue 5px;border-top:solid lightblue 10px;">
+  <b style="display:block;margin:15px;border-bottom:solid lightblue 5px;">お知らせ</b>
+  <hr>
+  <p>新たなお知らせはありません</p>
+  <hr>
+</div>
 
     <footer style="display:block;text-align:center;padding:20px;background:#fcfcfc;color:#909090;margin:none;">
 
