--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
             <details><summary>詳細な検索条件を開く</summary>
             登録終了も検索する<input type="checkbox" style="display: inline;">
             </details>
-
+            <sbmt>
+              検索
+            </sbmt>
           </div>
 
           <div id="tab2" class="tab-content">
@@ -97,7 +99,6 @@
              <p></p>
             <input>
           </div>
-
         </div>
       </div>
       <script src="https://hmg-publisha.haruharutv.jp/artist/a-script.js">
@@ -131,6 +132,16 @@
     display:block;
     border:solid 2px #ccc;
     border-radius: 5px;
+  }
+  sbmt{
+    padding:5px;
+    display:block;
+    background:rgb(3, 212, 202);
+    border-radius: 5px;
+    margin:10px;
+    text-align: center;
+    color:#fff;
+    font-size:21px;
   }
 .tab-container {
     display: flex;
