--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   }
   sbmt{
     padding:5px;
-    display:block;
+    display:inline-block;
     background:rgb(3, 212, 202);
     border-radius: 5px;
     margin:10px;
@@ -448,7 +448,11 @@
       width: 100%;
       box-shadow: 10px 0px 320px 10px gray;
     }
+    sbmt{
 
+    display:block;
+
+  }
     .iiframe {
       width: 70%;
     }
