--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
           <div id="tab2" class="tab-content">
             <h3>組織番号で探す</h3>
-             <p></p>
+             <p>組織番号13桁を入力してください</p>
             <input>
           </div>
         </div>
