--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
           </div>
 
           <div id="tab2" class="tab-content">
-            <h3 style="">組織番号で探す</h3>
+            <h3 style="color:rgb(162, 221, 241)">組織番号で探す</h3>
              <p>組織番号13桁を入力してください</p>
-            <input style="font-size: 30px;font-weight: bold;" placeholder="123456789123" maxlength="13"><sbmt onclick="sbmt1()">
+            <input style="font-size: 30px;font-weight: bold;max-width: 100%;" placeholder="123456789123" maxlength="13">
+            <sbmt onclick="sbmt1()">
               検索
             </sbmt>
           </div>
