--- a/index.html
+++ b/index.html
@@ -117,13 +117,14 @@
       </div>
       <script src="https://hmg-publisha.haruharutv.jp/artist/a-script.js">
       </script>
+      <div style="display:block;margin:15px;border-bottom:solid lightblue 5px;border-top:solid lightblue 10px;border-radius:10px 10px 0px 0px;">
+        <b style="display:block;margin:15px;border-bottom:solid lightblue 5px;">お知らせ</b>
+        <hr>
+        <p>新たなお知らせはありません</p>
+        <hr>
+      </div>
     </about>
-<div style="display:block;margin:15px;border-bottom:solid lightblue 5px;border-top:solid lightblue 10px;">
-  <b style="display:block;margin:15px;border-bottom:solid lightblue 5px;">お知らせ</b>
-  <hr>
-  <p>新たなお知らせはありません</p>
-  <hr>
-</div>
+
 
     <footer style="display:block;text-align:center;padding:20px;background:#fcfcfc;color:#909090;margin:none;">
 
