--- a/index.html
+++ b/index.html
@@ -123,6 +123,18 @@
         <p>新たなお知らせはありません</p>
         <hr>
       </div>
+      <div style="display:block;margin:15px;border-bottom:solid lightblue 5px;border-top:solid lightblue 10px;border-radius:10px 10px 10px 10px;">
+        <a href="about/">
+          <div style="display:block;margin:15px;background-color:#fff;padding:10px;">
+          Indeeecsa組織番号とは？
+          </div>
+        </a>
+        <a href="about/">
+          <div style="display:block;margin:15px;background-color:#fff;padding:10px;">
+          WebAPIの仕様などについて
+          </div>
+        </a>
+      </div>
     </about>
 
 
@@ -131,8 +143,7 @@
       <div id="linkbox">
         <a href="about/" style="color:#909090">このサイトについて</a>
         <a href="https://hmg-publisha.haruharutv.jp/terms" style="color:#909090">共通利用規約↗</a>
-        <a href="privacy" style="color:#909090">プライバシーポリシー</a>
-        <a href="sitemap" style="color:#909090">サイトマップ</a>
+        <a href="sitemap/" style="color:#909090">サイトマップ</a>
         <br>
         <a href="https://haruharutv.jp/" style="color:#909090">はるはるTV</a>
       </div>
