--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <topbar>
-<img src="./service-logo.png" class="haruharu-strmng-logo">
+<img src="/service-logo.png" class="haruharu-strmng-logo">
 </topbar>
 <maincontents>
     <div style="text-align:left;">
