--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <p>新たなお知らせはありません</p>
         <hr>
       </div>
-      <div style="display:block;margin:15px;border-bottom:solid lightblue 5px;border-top:solid lightblue 10px;border-radius:10px 10px 10px 10px;">
+      <div style="display:block;background: lightblue 10px;border-radius:10px">
         <a href="about/">
           <div style="display:block;margin:15px;background-color:#fff;padding:10px;">
           Indeeecsa組織番号とは？
