--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
       </div>
       <div style="display:block;background: lightblue 10px;border-radius:10px">
         <a href="about/">
-          <div style="display:block;margin:15px;background-color:#fff;padding:10px;">
+          <div style="display:block;margin:15px;background-color:#fff;padding:10px;color:#000;">
           Indeeecsa組織番号とは？
           </div>
         </a>
         <a href="about/">
-          <div style="display:block;margin:15px;background-color:#fff;padding:10px;">
+          <div style="display:block;margin:15px;background-color:#fff;padding:10px;color:#000;">
           WebAPIの仕様などについて
           </div>
         </a>
