--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
         <p>新たなお知らせはありません</p>
         <hr>
       </div>
-      <div style="display:block;background: lightblue 10px;border-radius:10px">
+      <div style="display:block;background: lightblue 10px;border-radius:10px;padding:10px;">
         <a href="about/">
-          <div style="display:block;margin:15px;background-color:#fff;padding:10px;color:#000;">
+          <div style="display:block;margin:15px;background-color:#fff;padding:10px;color:#000;border-radius:10px;">
           Indeeecsa組織番号とは？
           </div>
         </a>
-        <a href="about/">
-          <div style="display:block;margin:15px;background-color:#fff;padding:10px;color:#000;">
+        <a href="api/">
+          <div style="display:block;margin:15px;background-color:#fff;padding:10px;color:#000;border-radius:10px;">
           WebAPIの仕様などについて
           </div>
         </a>
