--- a/about/help/index.html
+++ b/about/help/index.html
@@ -7,14 +7,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Indeeecsa組織番号データベース検索の基本的な方針や利用方法などをお伝えしています">
+    content="データベースの利用方法を解説しています。組織番号の入力法や地域の確認方法などの利用方法を解説しています。">
   <meta name="keywords" content="組織番号検索サイト">
   <meta name="author" content="Indeeecsa">
-  <meta property="og:title" content="組織番号検索 by Indeeecsa">
-  <meta property="og:description"
-    content="Indeeecsa組織番号データベース検索の基本的な方針や利用方法などをお伝えしています">
-  <meta property="og:image" content="https://hmg-publisha.haruharutv.jp/">
-  <title>このサイトについて | Indeeecsa組織番号データベース検索</title>
+  <title> | Indeeecsa組織番号データベース検索</title>
 </head>
 <body>
   <topbar>
