--- a/about/help/index.html
+++ b/about/help/index.html
@@ -10,7 +10,7 @@
     content="データベースの利用方法を解説しています。組織番号の入力法や地域の確認方法などの利用方法を解説しています。">
   <meta name="keywords" content="組織番号検索サイト">
   <meta name="author" content="Indeeecsa">
-  <title> | Indeeecsa組織番号データベース検索</title>
+  <title>利用方法 | Indeeecsa組織番号データベース検索</title>
 </head>
 <body>
   <topbar>
@@ -20,7 +20,7 @@
     
     <about>
         <div style="text-align: left;margin-left:20px;margin-right:20px;">
-            <a href="../index.html">ホーム</a> > このサイトについて<br>
+            <a href="../index.html">ホーム</a> > このサイトについて > 利用方法<br>
             <h2>このサイトについて</h2>
             <p>このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。</p>
             <a href="/help/index.html">利用方法</a>
