--- a/about/help/index.html
+++ b/about/help/index.html
@@ -20,16 +20,19 @@
     
     <about>
         <div style="text-align: left;margin-left:20px;margin-right:20px;">
-            <a href="../index.html">ホーム</a> > このサイトについて > 利用方法<br>
-            <h2>このサイトについて</h2>
-            <p>このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。</p>
-            <a href="/help/index.html">利用方法</a>
-            <h3>利用規約</h3>
-            <p>当サイトを利用した時点で、Indeeecsaのプロバイダ団体の利用規約について同意したものとします。</p>
-            <a href="https://hmg-publisha.haruharutv.jp/terms">利用規約↗</a>
-            <h3>リンクについて</h3>
-            <p>このサイトへのリンクを掲載する場合はトップページのURLの上、下のバナーもご活用ください。また、当サイトをiframeやembeddなどでご自身のサイトに埋め込むことは禁止しております。ご自身のサイトから情報を参照されたい場合は開発者向けAPIを利用してください。</p>
-            <img src="https://indeeecsa-orgnization-search.netlify.app/soshiki-search-banner.png" style="width:250px;">
+            <a href="/index.html">ホーム</a> > このサイトについて > 利用方法<br>
+            <h2>利用方法</h2>
+            <p>データベースの利用方法を解説しています。<br>組織番号の入力法や地域の確認方法などの利用方法を解説しています。</p>
+            <h3>検索をする</h3>
+            <b>名称などで探す</b>
+            <p>1.まず、トップページへ行きます。<br>2.名称がわかっている場合は「団体の名称」に入力して検索を押してください。</p>
+            　<p>POINT ここでのポイントは、少し下へ行くと詳細な検索条件を指定できます。</p>
+            <p>もし、名称はわからなくてもおおよその活動地域がわかる場合は次の方法で検索できる可能性があります。</p>
+            <p>1.まず同様に、トップページへ行きます。<br>2.「活動地域」でその団体の活動地域、もしくは所在地の都道府県を選択して検索を押して下さい。</p>
+            <b>組織番号で探す</b>
+            <p>組織番号から組織を検索する場合はの検索方法があります。</p>
+            <p>1.まず、トップページへ行きます。<br>2.次にロゴの下にある「組織番号で探す」タブで画面に切り替えます。<br>3.13桁の組織番号を入力し、検索を押してください。</p>
+            　<p>POINT ここでのポイントは、13桁以上は入力できません。正しいと思って入力していたら入力できない等になった場合誤って入力している可能性がありますので、ご確認ください。</p>
         </div>    
     </about>
 
