--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
             <a href="../index.html">ホーム</a> > このサイトについて<br>
             <h2>このサイトについて</h2>
             <p>このサイトでは、Indeeecsaが組織番号を割り当てた者の1.団体の名称など2.Indeeecsaが割り当てた組織番号を公表しています。また、開発者などに向けたAPIなども試験的に公開しております。</p>
-            <a href="/help/index.html">利用方法</a>
+            <a href="help/index.html">利用方法</a>
             <h3>利用規約</h3>
             <p>当サイトを利用した時点で、Indeeecsaのプロバイダ団体の利用規約について同意したものとします。</p>
             <a href="https://hmg-publisha.haruharutv.jp/terms">利用規約↗</a>
