--- a/about/help/index.html
+++ b/about/help/index.html
@@ -33,6 +33,7 @@
             <p>組織番号から組織を検索する場合はの検索方法があります。</p>
             <p>1.まず、トップページへ行きます。<br>2.次にロゴの下にある「組織番号で探す」タブで画面に切り替えます。<br>3.13桁の組織番号を入力し、検索を押してください。</p>
             　<p>POINT ここでのポイントは、13桁以上は入力できません。正しいと思って入力していたら入力できない等になった場合誤って入力している可能性がありますので、ご確認ください。</p>
+            <b>※組織番号は半角で入力する必要があります。</b>
         </div>    
     </about>
 
