--- a/index.html
+++ b/index.html
@@ -108,7 +108,17 @@
           <div id="tab2" class="tab-content">
             <h3 style="color:rgb(162, 221, 241)">組織番号で探す</h3>
              <p>組織番号13桁を入力してください</p>
-            <input style="font-size: 30px;font-weight: bold;max-width: 100%;" placeholder="123456789123" maxlength="13">
+            <input style="font-size: 30px;font-weight: bold;max-width: 100%;" placeholder="123456789123" maxlength="13" onkeydown="chsc()" id="orgid">
+            <div id="shouws"></div>
+            <script>
+              function chsc(){
+                document.getElementById("shous").innerHTML=document.getElementById("orgid").value.length;
+                if(document.getElementById("orgid").value==""){
+
+                }
+              }
+            </script>
+
             <sbmt onclick="sbmt1()">
               検索
             </sbmt>
