--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div id="shouws"></div>
             <script>
               function chsc(){
-                document.getElementById("shous").innerHTML=document.getElementById("orgid").value.length;
+                document.getElementById("shous").innerHTML="<p style='color:red;'>現在<b>"+document.getElementById("orgid").value.length+"</b>文字です</p>";
                 if(document.getElementById("orgid").value==""){
 
                 }
