--- a/index.html
+++ b/index.html
@@ -112,9 +112,11 @@
             <div id="shouws"></div>
             <script>
               function chsc(){
-                document.getElementById("shouws").innerHTML="<p style='color:red;'>現在<b>"+document.getElementById("orgid").value.length+"</b>文字です</p>";
-                if(document.getElementById("orgid").value==""){
-
+                document.getElementById("shouws").innerHTML="<p id='stas'>現在<b>"+document.getElementById("orgid").value.length+"</b>文字です</p>";
+                if(document.getElementById("orgid").value!=30){
+                  document.getElementById("stas").style.color="red";
+                }else{
+                  document.getElementById("stas").style.color="lightgreen";
                 }
               }
             </script>
