--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
           <div id="tab2" class="tab-content">
             <h3 style="color:rgb(162, 221, 241)">組織番号で探す</h3>
              <p>組織番号13桁を入力してください</p>
-            <input style="font-size: 30px;font-weight: bold;max-width: 100%;" placeholder="123456789123" maxlength="13" onkeypress="chsc()" id="orgid">
+            <input style="font-size: 30px;font-weight: bold;max-width: 100%;" placeholder="123456789123" maxlength="13" oninput="chsc()" id="orgid">
             <div id="shouws"></div>
             <script>
               
               function chsc(){
-                document.getElementById("shouws").innerHTML="<p id='stas'>現在<b>"+document.getElementById("orgid").value.length+1+"</b>文字です</p>";
+                document.getElementById("shouws").innerHTML="<p id='stas'>現在<b>"+document.getElementById("orgid").value.length+"</b>文字です</p>";
                 if(document.getElementById("orgid").value.length==13){
                   document.getElementById("stas").style.color="lightgreen";
                 }else{
