--- a/kensakumeisho.html
+++ b/kensakumeisho.html
@@ -34,7 +34,7 @@
                         async: false
                     })
                         .done(function (data) {
-
+                            console.log(data);
                         })
                         .fail(function (XMLHttpRequest, textStatus, errorThrown) {
                             alert("読み込めませんでした", XMLHttpRequest, textStatus, errorThrown);
