--- a/kensakumeisho.html
+++ b/kensakumeisho.html
@@ -28,14 +28,14 @@
                 <div id="result"></div>
                 <script>
                     $.ajax({
-                        type: "POST",
+                        type: "GET",
                         url: "https://script.google.com/macros/s/AKfycbw7LGlAZx6yYTf37wRM7HoMRMayOalEQcb3razeqBhKAW18vBsPIwe3_eH7BlkeMs24/exec",
                         data: { key:location.search.substr(5) },
                         async: false
                     })
                         .done(function (data) {
                             console.log(data);
-                            
+
                         })
                         .fail(function (XMLHttpRequest, textStatus, errorThrown) {
                             alert("読み込めませんでした", XMLHttpRequest, textStatus, errorThrown);
