--- a/kensakumeisho.html
+++ b/kensakumeisho.html
@@ -37,7 +37,7 @@
                             var resultDiv = document.getElementById("result");
                             console.log(data);
                             if(data.length === 0){
-                                resultDiv.innerHTML="一致する団体が見つかりませんでした。<br>もしかしたら、名称のみで都道府県を指定しない。もしくはその逆でやってみてください。<br>読み方で検索する場合は完全にわからない場合、カタカナでわかる途中までを入力してみてください。";
+                                resultDiv.innerHTML="一致する団体が見つかりませんでした。<hr>HINT ヒント<br>もしかしたら、名称のみで都道府県を指定しない。もしくはその逆でやってみてください。<br>読み方で検索する場合は完全にわからない場合、カタカナでわかる途中までを入力してみてください。";
                             }else{
                         
                             var resultDiv = document.getElementById("result");
