--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3 style="color:rgb(162, 221, 241)">活動地域</h3>
             <p>都道府県などで検索できます。</p>
             <select id="regsel">
-              <option value="no">選択してください</option>
+              <option value="">選択してください</option>
               <option value="北海道">北海道</option>
               <option value="青森県">青森県</option>
               <option value="岩手県">岩手県</option>
